@@ -4,4 +4,4 @@ parts = test
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.publisher [test]
+eggs = zope.publisher
