@@ -17,15 +17,12 @@ $Id$
 """
 import unittest
 from zope.testing.doctestunit import DocTestSuite
-from zope.app.testing import setup
 
 __docformat__ = "reStructuredText"
 
 def test_suite():
     return unittest.TestSuite((
-        DocTestSuite('zope.publisher.browser',
-                     setUp=setup.placelessSetUp,
-                     tearDown=setup.placelessTearDown),
+        DocTestSuite('zope.publisher.browser'),
         ))
 
 if __name__ == '__main__':
